fix to run on windows